[package]
name = "hb-buy-strategy"
version = "0.1.0"
authors = ["Morgana <xly_tk@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
lazy_static = "1.4"
serde_json = { version = "1" }
log = "0.4"
fern = "0.5"
chrono = "0.4"
hmac = "0.10"
sha2 = "0.9"
encoding_rs = "0.8"
base64 = "0.13"
urlencoding = "1.1"